welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:11: error: not found: value numslength
	for (i<- 0 to numslength-1) {
                      ^arrayFront9:10: error: type mismatch;
 found   : Unit
 required: Boolean
if (nums.length  <= 3) {
^